react numpad helmac version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-numpad",
+  "name": "react-numpad-helmac",
   "version": "4.1.2",
   "description": "Numpad react component, as number input or time input",
   "homepage": "https://gpietro.github.io/docs/",
